- Added 'undelete' as namespace independant right for addressing 'Special:Undelete' use-cases
- Fixed 'Pager.php' to support 'page_namespace' related queries as well as 'user' table related ones
-- Addresses 'Special:Listusers' special page issue
- Enhanced 'SpecialPagesManager' extension with a standard MW special for updating the
  BizzWiki special pages by reading the filesystem '/SpecialPages' directory.
=========
REL1_10_5:
- FileManager: Added PHP error suppression for file_get_contents upon initial page creation
- FormProc: added functionality enabling defining a class for form processing
- Added BizzWiki release identifier in global define 'BIZZWIKI'
- SecureHTML: added namespace exemption list functionality
- SecureProperties: added namespace exemption list functionality
- Corrected geshi, extensionclass, addscriptcss for PHP warnings (usage of deprecated PHP features)
- Adjusted 'url' field in extensions' credits
- ParserPhase2: Fixed client side caching logic due to a bug in PHP's preg_match_all function
- ExtensionClass: added 'AutoMethods' for initializing a derived class's hooks, parser functions & magic words automatically
- ExtensionClass: added support for adding 'head' and 'body' scripts links whilst preserving parser caching coherency.
- Added 'CacheTools' extension
- Added more documentation in BizzWikiSettings.php
- Added BizzWiki logo design files
==========
REL1_10_6:
- Integrated 'ParserFunctions' extension
- Integrated 'StringFunctions' extension
- Added 'PageFunctions' extension
- ParserPhase2: can now call any standard 'parser' functions & variables (i.e. through magic words)
- Added 'ForeachFunctions' extension
- Adjusted 'Log/rights' browse right for '*' group
- Adjusted 'Log/move' browse right for '*' group
- Adjusted 'Log/block' browse right for '*' group
- FileManager: disabled client side caching upon accessing NS_FILESYSTEM
- Added 'importupload' to managed rights
